--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
   @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap');
   @import url('https://fonts.googleapis.com/css2?family=Cedarville+Cursive&family=Mrs+Saint+Delafield&family=Poppins:wght@300;400;500;600&display=swap');
   @import url('https://fonts.googleapis.com/css2?family=League+Script&family=Mrs+Saint+Delafield&display=swap');
- 
+  @import url('https://fonts.googleapis.com/css2?family=League+Script&family=Love+Light&family=Mrs+Saint+Delafield&display=swap');
  
   *{
     margin: 0;
@@ -302,12 +302,29 @@ article .icon{
 }
 
 /* projects styling */
-#projects{
+#arts{
     position: relative;
 }
 .color-container{
     border-color: rgb(163, 163, 163) ;
     background-color: rgb(250, 250, 250);
+}
+.arts-img{
+    border-radius: 2rem;
+    width: 90%;
+    height: 90%;
+}
+.arts-title{
+    margin: 1rem;
+    color:rgb(0, 0, 0);
+}
+.arts-btn{
+    color: black;
+    border-color: rgb(163, 163, 163);
+}
+
+#project{
+    position: relative;
 }
 .project-img{
     border-radius: 2rem;
@@ -322,8 +339,8 @@ article .icon{
     color: black;
     border-color: rgb(163, 163, 163);
 }
-/* contact styling */
 
+/* contact styling */
 #contact{
     display: flex;
     justify-content: center;
@@ -409,13 +426,13 @@ footer p{
     font-weight: 400;
 }
 .section__text__p3{
-    text-align: center;
+    text-align : left ;
     font-size: 5rem;
 }
 .title_lang{
     font-size: 7rem;
-    text-align: center;
-    font-family: 'League Script', cursive;
+    text-align: left;
+    font-family: 'Love Light', cursive;
     
 }
 
@@ -424,7 +441,7 @@ footer p{
     --back_color : #FFECF6  ;
   }
 
-  .button{
+  .button_lang{
       position : relative ;
       z-index : 0 ;
       width : 240px ;
@@ -436,17 +453,18 @@ footer p{
       letter-spacing : 2px ;
       transition : all .3s ease ;
       margin-top: 2rem;
+      
   }
   .button__text{
       display : flex ;
       justify-content : center ;
-      align-items : center ;
+      align-items : left ;
       width : 100% ;
       height : 100% ;
       font-size: 2.5rem;
   }
-  .button::before,
-  .button::after,
+  .button_lang::before,
+  .button_lang::after,
   .button__text::before,
   .button__text::after{
       content : '' ;
@@ -456,12 +474,12 @@ footer p{
       background : lightpink ;
       transition : all .5s ease ;
   }
-  .button::before{
+  .button_lang::before{
       top : 0 ;
       left : 54px ;
       width : calc( 100% - 56px * 2 - 16px ) ;
   }
-  .button::after{
+  .button_lang::after{
       top : 0 ;
       right : 54px ;
       width : 8px ;
@@ -507,11 +525,11 @@ footer p{
   .button:hover{
       letter-spacing : 6px ;
   }
-  .button:hover::before,
-  .button:hover .button__text::before{
+  .button_lang:hover::before,
+  .button_lang:hover .button__text::before{
       width : 8px ;
   }
-  .button:hover::after,
+  .button_lang:hover::after,
   .button:hover .button__text::after{
       width : calc( 100% - 56px * 2 - 16px ) ;
       
@@ -588,27 +606,27 @@ footer p{
   .button__drow2::after{
       background : var( --back_color ) ;
   }
-  .button:hover .button__drow1{
+  .button_lang:hover .button__drow1{
       animation : drow1 ease-in .06s ;
       animation-fill-mode : forwards ;
   }
-  .button:hover .button__drow1::before{
+  .button_lang:hover .button__drow1::before{
       animation : drow2 linear .08s .06s ;
       animation-fill-mode : forwards ;
   }
-  .button:hover .button__drow1::after{
+  .button_lang:hover .button__drow1::after{
       animation : drow3 linear .03s .14s ;
       animation-fill-mode : forwards ;
   }
-  .button:hover .button__drow2{
+  .button_lang:hover .button__drow2{
       animation : drow4 linear .06s .2s ;
       animation-fill-mode : forwards ;
   }
-  .button:hover .button__drow2::before{
+  .button_lang:hover .button__drow2::before{
       animation : drow3 linear .03s .26s ;
       animation-fill-mode : forwards ;
   }
-  .button:hover .button__drow2::after{
+  .button_lang:hover .button__drow2::after{
       animation : drow5 linear .06s .32s ;
       animation-fill-mode : forwards ;
   }
@@ -635,6 +653,6 @@ footer p{
       100% { width : 124px ; }
   }
 
-  .button:not(:last-child){
+  .button_lang:not(:last-child){
     margin-bottom : 64px ;
   }
