--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
   @import url('https://fonts.googleapis.com/css2?family=Cedarville+Cursive&family=Mrs+Saint+Delafield&family=Poppins:wght@300;400;500;600&display=swap');
   @import url('https://fonts.googleapis.com/css2?family=League+Script&family=Mrs+Saint+Delafield&display=swap');
   @import url('https://fonts.googleapis.com/css2?family=League+Script&family=Love+Light&family=Mrs+Saint+Delafield&display=swap');
- 
+  @import url('https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap');
   *{
     margin: 0;
    padding: 0;
@@ -458,10 +458,11 @@ footer p{
   .button__text{
       display : flex ;
       justify-content : center ;
-      align-items : left ;
+      align-items : center ;
       width : 100% ;
       height : 100% ;
-      font-size: 2.5rem;
+      font-size: 2rem;
+      font-family: 'Dancing Script', cursive;
   }
   .button_lang::before,
   .button_lang::after,
@@ -493,8 +494,7 @@ footer p{
   .button__text::after{
       bottom : 0 ;
       left : 54px ;
-      width : 8px ;
-      
+      width : 8px ; 
   }
   .button__line{
       position : absolute ;
